--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lucide-react": "^0.446.0",
     "next": "^13.5.1",
     "next-themes": "^0.3.0",
+    "picocolors": "^1.1.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
