--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "^13.5.1",
+    "eslint-visitor-keys": "^5.0.0",
     "framer-motion": "^12.23.12",
     "input-otp": "^1.2.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.446.0",
     "next": "^13.5.11",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "picocolors": "^1.1.1",
     "react": "^18.2.0",
