--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "docker:down": "docker compose down"
   },
   "dependencies": {
+    "@fontsource/fraunces": "^5.2.9",
+    "@fontsource/source-serif-4": "^5.2.9",
+    "@fontsource/work-sans": "^5.2.8",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
