--- a/package.json
+++ b/package.json
@@ -50,25 +50,21 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
-    "@types/three": "^0.182.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^11.18.2",
     "input-otp": "^1.2.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.446.0",
-    "next": "^14.2.0",
+    "next": "^15.2.0",
     "next-pwa": "^5.6.0",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.4",
     "picocolors": "^1.1.1",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.1.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
@@ -78,17 +74,21 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.183.0",
-    "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.25.76",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/minimatch": "^3.0.5",
+    "@types/node": "^20.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "^14.2.0",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.2.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.2.0"
   }
 }
