--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "framer-motion": "^11.18.2",
     "input-otp": "^1.2.4",
     "lottie-react": "^2.4.1",
+    "lru-cache": "^11.2.6",
     "lucide-react": "^0.446.0",
     "next": "^15.2.0",
     "next-pwa": "^5.6.0",
