--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,8 @@
 {
-    "extends": "next/core-web-vitals",
-    "rules": {},
-    "ignorePatterns": [
-        "node_modules/",
-        ".next/",
-        "dist/"
-    ]
+  "extends": ["next/core-web-vitals"],
+  "rules": {
+    "react-hooks/set-state-in-effect": "off",
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-html-link-for-pages": "off"
+  }
 }
