--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,13 @@
 {
-  "extends": ["next/core-web-vitals"],
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:react-hooks/recommended"
+  ],
+  "plugins": [
+    "react-hooks"
+  ],
   "rules": {
+    "react-hooks/set-state-in-effect": "off",
     "react/no-unescaped-entities": "off",
     "@next/next/no-html-link-for-pages": "off"
   }
