--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.183.0",
-    "vaul": "^0.9.9",
+    "vaul": "^1.0.0",
     "zod": "^3.25.76",
     "zustand": "^5.0.11"
   },
@@ -101,6 +101,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.2.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.0"
